logs/easy-extract.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/easy_extract'...
Listing './lib/python3.5/site-packages/easy_extract/archives'...
Compiling './lib/python3.5/site-packages/easy_extract/archives/hj_split.py'...
***   File "./lib/python3.5/site-packages/easy_extract/archives/hj_split.py", line 19
    print 'Extracting %s...' % new_filename
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/easy_extract/archives/xtm.py'...
***   File "./lib/python3.5/site-packages/easy_extract/archives/xtm.py", line 20
    print 'Extracting %s...' % new_filename
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/easy_extract/scripts'...
Compiling './lib/python3.5/site-packages/easy_extract/scripts/extract.py'...
***   File "./lib/python3.5/site-packages/easy_extract/scripts/extract.py", line 40
    print 'Scanning %s...' % os.path.abspath(path)
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/easy_extract/scripts/index.py'...
***   File "./lib/python3.5/site-packages/easy_extract/scripts/index.py", line 21
    print 'Scanning %s...' % os.path.abspath(path)
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/easy_extract-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
